syntax = "proto3";

package calculator;

import "validate/validate.proto";

option go_package = "/proto/gen;mainpb";

service Calculator {
    rpc Sum (CalculateRequest) returns (CalculateResponse);
    rpc GenerateFibonacci(FibonacciRequest) returns (stream FibonacciResponse); // Server side stream
    rpc SendNumbers (stream NumberRequest) returns (NumberResponse); // Client side stream
    rpc Chat (stream ChatMessage) returns (stream ChatMessage); // Bi Directional stream 
}

message ChatMessage {
    string message = 1;
}

message NumberRequest {
    int32 number = 1;
}

message NumberResponse {
    int32 sum = 1;
}

message CalculateRequest{
   repeated int32 numbers = 1;
   // added validation rules
   string calculate_flag = 2 [(validate.rules).string = {min_len: 1, max_len: 1},(validate.rules).string.pattern = "[a-zA-Z]+"]; // validation logic
}

message CalculateResponse {
    int32 sum = 1;
}

message FibonacciRequest{
    int32 n = 1;
}

message FibonacciResponse {
    int32 number = 1;
}